@@ -1,5 +1,8 @@
 Sun Sep  7 07:45:35 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* update.c (checkout_file): Only ignore existence_error from
+	unlink_file_dir, not all errors.
+
 	* checkout.c (safe_location): Check for errors from xgetwd.
 	* create_adm.c (Create_Admin): Remove call to xgetwd; it is just
 	debugging code anyway and it wasn't checking for errors.
